@@ -1,0 +1,9 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Id: vmware-modules-101-r3.ebuild 48 2006-05-28 16:54:26Z ikelos $
+
+inherit vmware-mod
+
+KEYWORDS="-* ~amd64 ~x86"
+VMWARE_VER="VME_V452"
+
