@@ -22,6 +22,18 @@ AUX 90vmware-player 91 RMD160 025ff93348f5a838183e4f6108d7030168ca5ed5 SHA1 54c3
 MD5 40cfaf639df38a7cb04073555992d31e files/90vmware-player 91
 RMD160 025ff93348f5a838183e4f6108d7030168ca5ed5 files/90vmware-player 91
 SHA256 9aee16313163bd9e161e81ef2876d086fb8972489100c4f8f0a4695ff16578f9 files/90vmware-player 91
+AUX vmware-player-1.0.1.19317-config.patch 1131 RMD160 3ab69d825994cc3bb177143d27091fc292cec46a SHA1 14264460c8500f1ead267059e2b9b9a5dc8c057f SHA256 b4055370b0092e71a2b2b0f27edeb7bc063ad265f95ab4530e52c3ab3167ad62
+MD5 23d97e5e436a0d827b48db3ed9948aa7 files/vmware-player-1.0.1.19317-config.patch 1131
+RMD160 3ab69d825994cc3bb177143d27091fc292cec46a files/vmware-player-1.0.1.19317-config.patch 1131
+SHA256 b4055370b0092e71a2b2b0f27edeb7bc063ad265f95ab4530e52c3ab3167ad62 files/vmware-player-1.0.1.19317-config.patch 1131
+AUX vmware-player-1.0.1.19317-config2.patch 647 RMD160 0f25f7dd60dfcb5a72b1f7b9cf344d6f431143a9 SHA1 cabd3dd071ef62d4c70f52d1a3e02334ec7f3a73 SHA256 41492cde60da6d449c0f427ac7bd65598838ec17ac0e3a5f545feeb1d29ea391
+MD5 3df74f4dfaa783b6a2f9eba3f0030afa files/vmware-player-1.0.1.19317-config2.patch 647
+RMD160 0f25f7dd60dfcb5a72b1f7b9cf344d6f431143a9 files/vmware-player-1.0.1.19317-config2.patch 647
+SHA256 41492cde60da6d449c0f427ac7bd65598838ec17ac0e3a5f545feeb1d29ea391 files/vmware-player-1.0.1.19317-config2.patch 647
+AUX vmware-player-1.0.1.19317-config3.patch 671 RMD160 9e8a46b76621b67be28cba60524bc4dea0dbd068 SHA1 9ff01452cc40dc0570e727b75f415b5c779e9086 SHA256 df96cf12b9e7ab2578c134c94e43f11fb8a187a3a0ddf8f645a8aa126020caab
+MD5 c97a07443c0b9124d7cecec1e15bee07 files/vmware-player-1.0.1.19317-config3.patch 671
+RMD160 9e8a46b76621b67be28cba60524bc4dea0dbd068 files/vmware-player-1.0.1.19317-config3.patch 671
+SHA256 df96cf12b9e7ab2578c134c94e43f11fb8a187a3a0ddf8f645a8aa126020caab files/vmware-player-1.0.1.19317-config3.patch 671
 AUX vmware.rc 1412 RMD160 09fbb1527dc84c56876dd51959add56a90f920d8 SHA1 12aaf2fe13f5b76d6ddb4a6446f5171a4fb4c36e SHA256 ec3af7213b1f1e4711f80f6bfc61ee6f607747e916fe088396ba52b029d83dd0
 MD5 10665536157729f47cf5417aa951316a files/vmware.rc 1412
 RMD160 09fbb1527dc84c56876dd51959add56a90f920d8 files/vmware.rc 1412
@@ -31,11 +43,20 @@ MD5 aa1b576735134579f04b29763901dc4f files/vmware.xml 1592
 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c files/vmware.xml 1592
 SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d files/vmware.xml 1592
 DIST VMware-player-1.0.1-19317.tar.gz 35786922 RMD160 7ba3c6cefaf6fb98cc932d0974206b6b0f408a29 SHA1 8b1a7d21c8bb8cce9422a1da8fbae1a047957e05 SHA256 c4b0e43ef7e56803e8bc822f2ab240bd2911019dca2d6a615e76dc41642cb4bf
+DIST vmware-any-any-update101.tar.gz 296409 RMD160 d8994b91492257d8b8e08480ab27fc307fc34095 SHA1 43714052429c1574cdf086a052859657affff0b0 SHA256 b12e3a70117ef26a85c8e01a23ea7d21b62bbc86998368114f9f7932390d2037
 DIST vmware.png 470 RMD160 759a5530b3bb605e6bc2c1e203490163d320485d SHA1 2262b25fb3ec66ed7b209ff5205fb9b289ca1afc SHA256 9bec91ecc32fa913141ca303abf1abec988ebc7fb4f27389f173bf3493bffb9b
-EBUILD vmware-player-1.0.1.19317-r4.ebuild 4573 RMD160 358907b946f0b5c964ff95f3551f2f05370a615f SHA1 6a0780be8cb54fc0e08b6c504ebc0a178f6b0c73 SHA256 437e70dfbc6c227ba0e02c3f7b01cd5b5d9500597a156193adf133cf6b50eff0
-MD5 0ee29e37583dbbebfb6c055b233db1d9 vmware-player-1.0.1.19317-r4.ebuild 4573
-RMD160 358907b946f0b5c964ff95f3551f2f05370a615f vmware-player-1.0.1.19317-r4.ebuild 4573
-SHA256 437e70dfbc6c227ba0e02c3f7b01cd5b5d9500597a156193adf133cf6b50eff0 vmware-player-1.0.1.19317-r4.ebuild 4573
+EBUILD vmware-player-1.0.1.19317-r3.ebuild 8163 RMD160 b802d5d7759f8686c7baed04172e4faaec0ef7b3 SHA1 f4d375536a0d1da74746ce4817555edce0a0924b SHA256 22cf0fca9dc4fed116eee96e3a4f4fee63c6852bc9c714e9c59dbc75f9efe454
+MD5 f8a90c35911871df2705bb3c5b43b989 vmware-player-1.0.1.19317-r3.ebuild 8163
+RMD160 b802d5d7759f8686c7baed04172e4faaec0ef7b3 vmware-player-1.0.1.19317-r3.ebuild 8163
+SHA256 22cf0fca9dc4fed116eee96e3a4f4fee63c6852bc9c714e9c59dbc75f9efe454 vmware-player-1.0.1.19317-r3.ebuild 8163
+EBUILD vmware-player-1.0.1.19317-r4.ebuild 4421 RMD160 d01404c235d75ca4abb21fcefcfceb1e3d842b13 SHA1 801a8d6c474e767d3a733809c55eefed1387c7b5 SHA256 6912dd454b344f7668ca2a8bac6a3ed93999b6580633bb704a91fb071530c8a8
+MD5 eb6fbd384f0f93ae9e0efc09874e0261 vmware-player-1.0.1.19317-r4.ebuild 4421
+RMD160 d01404c235d75ca4abb21fcefcfceb1e3d842b13 vmware-player-1.0.1.19317-r4.ebuild 4421
+SHA256 6912dd454b344f7668ca2a8bac6a3ed93999b6580633bb704a91fb071530c8a8 vmware-player-1.0.1.19317-r4.ebuild 4421
+EBUILD vmware-player-1.0.1.19317-r5.ebuild 4361 RMD160 14a4e9b407dacd1e9f15d9a94f6b7363d44b6445 SHA1 9cfcbd72866d44599964d58974d0df3b400b580e SHA256 4d1e5eb9382fd872f55b37abbc9586d52080b89e0669308a93836bf9c7ca3ff3
+MD5 41483c8b0b308102df4eb820c0b7046c vmware-player-1.0.1.19317-r5.ebuild 4361
+RMD160 14a4e9b407dacd1e9f15d9a94f6b7363d44b6445 vmware-player-1.0.1.19317-r5.ebuild 4361
+SHA256 4d1e5eb9382fd872f55b37abbc9586d52080b89e0669308a93836bf9c7ca3ff3 vmware-player-1.0.1.19317-r5.ebuild 4361
 MISC ChangeLog 3271 RMD160 b181d1ac8ce4df3a9c6a2807482a273803045b85 SHA1 58ef63b730c1bae0cdf764c82f5e19934f85216f SHA256 a35a4da046b4c1df837ff5c2aa453616b8739d5c27fa290357ceb5ae82a64a3a
 MD5 9d571bbc8a5e1e803082db2a2fca0e72 ChangeLog 3271
 RMD160 b181d1ac8ce4df3a9c6a2807482a273803045b85 ChangeLog 3271
@@ -44,6 +65,12 @@ MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b0
 MD5 7cc95faad4185e8ed375248bc73a17fc metadata.xml 159
 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 metadata.xml 159
 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215 metadata.xml 159
+MD5 0d2ab32e5622d011b7e46c772e9ed475 files/digest-vmware-player-1.0.1.19317-r3 759
+RMD160 41e7a0dac4dcbf40d91cb01621898aaadbe64fb7 files/digest-vmware-player-1.0.1.19317-r3 759
+SHA256 bd714c9a2ce3b52e842099ea20d9e5aa917b0d0d0e758df334c426563c159084 files/digest-vmware-player-1.0.1.19317-r3 759
 MD5 1a39355473a3e8ccbb43066bb59d3b11 files/digest-vmware-player-1.0.1.19317-r4 485
 RMD160 60090a1fdf14981d45257972888a772a6b7a7e4c files/digest-vmware-player-1.0.1.19317-r4 485
 SHA256 62bea80b5102a82d70ddf403735bab06ca86d4a3b5db4f501c75d3a2c7995734 files/digest-vmware-player-1.0.1.19317-r4 485
+MD5 1a39355473a3e8ccbb43066bb59d3b11 files/digest-vmware-player-1.0.1.19317-r5 485
+RMD160 60090a1fdf14981d45257972888a772a6b7a7e4c files/digest-vmware-player-1.0.1.19317-r5 485
+SHA256 62bea80b5102a82d70ddf403735bab06ca86d4a3b5db4f501c75d3a2c7995734 files/digest-vmware-player-1.0.1.19317-r5 485
