@@ -1,0 +1,3 @@
+MD5 6101deb381beb49f5b99cb1f8a81a532 VMware-workstation-5.5.1-19175.tar.gz 100090786
+RMD160 79735996e1d79e96783db7d2dac67b7b7f605f47 VMware-workstation-5.5.1-19175.tar.gz 100090786
+SHA256 7346676d0ec1c72c3f8d3e4ced37311a63c99d757998b162a08724466504e2c3 VMware-workstation-5.5.1-19175.tar.gz 100090786
